[package]
name = "playground"
edition = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
publish = { workspace = true }

[dependencies]
clap = { workspace = true, features = ["derive"] }
mollusk-svm = { workspace = true }
mollusk-svm-programs-memo = { workspace = true }
mollusk-svm-programs-token = { workspace = true }
saros-amm-sdk = { workspace = true }
saros-dlmm-sdk = { workspace = true }
saros-programs = { workspace = true }
solana-account = { workspace = true }
solana-keypair = { workspace = true }
solana-log-collector = { workspace = true }
solana-program-pack = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signer = { workspace = true }
spl-associated-token-account-client = { workspace = true }
spl-memo-client = { workspace = true }
spl-token-2022 = { workspace = true }
spl-token-interface = { workspace = true }
spl-token-swap = { workspace = true }
