[package]
name = "saros-amm-sdk"
edition = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
publish = { workspace = true }

[dependencies]
saros-programs = { workspace = true, features = ["amm"] }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
spl-token-interface = { workspace = true }
spl-token-swap = { workspace = true }
